# betting-backtester

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
data/: README.md
docs/: DESIGN.md
scripts/: generate_readme_example.py
src/betting_backtester/: _event_ordering.py  arbitrage_generator.py  backtest_result.py  backtester.py  commission.py  dixon_coles.py  event_source.py  football_data.py  kelly.py  models.py  reporting.py  synthetic.py  walk_forward.py
src/betting_backtester/strategies/: arbitrage_detector.py  favourite_backer.py  xg_poisson.py
tests/: test_arbitrage_detector.py  test_arbitrage_generator.py  test_backtest_result.py  test_backtester.py  test_commission.py  test_dixon_coles.py  test_favourite_backer.py  test_football_data.py  test_kelly.py  test_models.py  test_reporting.py  test_synthetic.py  test_walk_forward.py  test_xg_poisson.py
tests/fixtures/football_data/bad_dates/: E0.csv
tests/fixtures/football_data/clean_modern/: D1.csv  E0.csv
tests/fixtures/football_data/crosses_seasons/: E0.csv
tests/fixtures/football_data/crosses_seasons_skip_hides/: E0.csv
tests/fixtures/football_data/malformed_rows/: E0.csv
tests/fixtures/football_data/pre_time_column/: E0.csv
tests/fixtures/football_data/tie_break/: E0.csv
